--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="gs-container">
         <div class="login-box">
-            <h2>Login to QuizMappy</h2>
+            <h2>Login to QuizMap</h2>
             <form action="#" method="POST" id="su">
 
                 <input type="text" id="username" name="username" required placeholder="Username"> </input>
