--- a/hackathon.html
+++ b/hackathon.html
@@ -23,7 +23,7 @@
       <p>
         Study for Free!<br>
       	Log in or Sign up!<br><br>
-        <a href="../login/login.html" class="pb">To Profile</a>
+        <a href="login.html" class="pb">To Profile</a>
        </p>
     </div> 
       
