--- a/profile.html
+++ b/profile.html
@@ -24,30 +24,30 @@ Online HTML, CSS and JavaScript editor to run code online.
                 <li class="card-item swiper-slide" onclick = jump()>
                     <a href="#" class="card-link">
                         <img src="s1.png" alt="bop" card="card-image">
-                          <p class="badge Developer">Map</p>
-                          <h2 class = "card-title">Short Description</h2>
+                          <p class="badge Developer">Biology 101</p>
+                          <h2 class = "card-title">The study of living organisms</h2>
                           
                     </a>
                 </li>
                 <li class="card-item swiper-slide" onclick = jump()>
                     <a href="#" class="card-link">
                         <img src="s2.png" alt="bop" card="card-image">
-                          <p class="badge Developer2">Map2</p> 
-                          <h2 class = "card-title">Short Description</h2>
+                          <p class="badge Developer2">Psychology 101</p> 
+                          <h2 class = "card-title"> The study of the human mind and its functions</h2>
                     </a>
                 </li>
                 <li class="card-item swiper-slide" onclick = jump()>
                     <a href="#" class="card-link">
                         <img src="s1.png" alt="bop" card="card-image"> </img>
-                          <p class="badge Developer3">Map3</p> 
-                        <h2 class = "card-title">Short Description</h2>
+                          <p class="badge Developer3">Physics  101</p> 
+                        <h2 class = "card-title">Branch of science concerned with the nature and properties of matter and energy</h2>
                     </a>
                 </li>
                 <li class="card-item swiper-slide" onclick = jump()>
                     <a href="#" class="card-link">
                         <img src="s2.png" alt="bop" card="card-image">
-                          <p class="badge Developer4">Map4</p> 
-                          <h2 class = "card-title">Short Description</h2>
+                          <p class="badge Developer4">Public speaking</p> 
+                          <h2 class = "card-title">Develop the skills and confidence to communicate effectively with an audience                          </h2>
                     </a>
                 </li>
           </ul>
